[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/godot-openxr/assets/valve_hand_models/right_hand.glb" type="PackedScene" id=1]
[ext_resource path="res://addons/godot-openxr/assets/valve_hand_models/left_hand.glb" type="PackedScene" id=2]
[ext_resource path="res://scripts/MotionControllerHand.gd" type="Script" id=3]
[ext_resource path="res://scripts/TeleportArc.gd" type="Script" id=4]
[ext_resource path="res://scenes/PointViz.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/TeleportLocation.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/GrabScript.gd" type="Script" id=7]

[sub_resource type="SphereShape" id=1]
radius = 0.0769891

[node name="Hand" type="ARVRController"]
script = ExtResource( 3 )

[node name="LeftHand" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0251952, -0.0398279, 0.159656 )

[node name="RightHand" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.0245986, -0.0398279, 0.159761 )

[node name="HandOverlap" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.03, 0.06 )
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="HandOverlap"]
shape = SubResource( 1 )

[node name="TeleportationArc" type="Spatial" parent="."]
script = ExtResource( 4 )
point_visualizer = ExtResource( 5 )
location_visualizer = ExtResource( 6 )

[connection signal="body_entered" from="HandOverlap" to="HandOverlap" method="_on_HandOverlap_body_entered"]
[connection signal="body_exited" from="HandOverlap" to="HandOverlap" method="_on_HandOverlap_body_exited"]
